--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/app.js",
-    "prettier:all":
+    "eslint": "./node_modules/.bin/eslint",
+    "prettier":
       "prettier --single-quote --no-semi --trailing-comma es5 --write 'app/**/*.js'",
     "precommit": "pretty-quick --staged"
   },
@@ -26,7 +27,14 @@
     "mongodb": "^3.1.0-beta4"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.8.2",
     "husky": "^0.14.3",
+    "mongoose": "^5.1.2",
     "nodemon": "^1.17.4",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.5.1"
